--- a/package.json
+++ b/package.json
@@ -2,19 +2,30 @@
   "name": "event-server",
   "version": "1.0.0",
   "description": "API Server for event sourcing",
-  "main": "app.js",
+  "main": "./src/server.js",
   "scripts": {
     "test": "test",
-    "start": "nodemon ./app.js --watch"
+    "start": "nodemon ./src/server.js --watch",
+    "debug": "ndb ./src/server.js"
   },
   "author": "nana koduah frimpong",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mongoose": "^6.4.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "ndb": "^1.1.5",
+    "nodemon": "^2.0.16",
+    "prettier": "^2.7.1"
+  },
+  "engines": {
+    "node": ">=16.14.0"
   }
 }
