--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ DATABASE_URL=mongodb url
 DATABASE_PASSWORD=mongo db password
 DB_NAME=mongo db database name
 SERVER_PORT=port for server to run
-NODE_ENV=development [node environment, keep as development]
+NODE_ENV=development [node environment, keep as development for cors if you are running app separately]
 
-JWT_SECRET=self generated text for JWT
+JWT_SECRET=Your own long generated text as secret for JWT
 JWT_EXPIRES_IN=jwt expiration
