clean up authorisation

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ SERVER_PORT=port for server to run
 NODE_ENV=development [node environment, keep as development for cors if you are running app separately]
 
 JWT_SECRET=Your own long generated text as secret for JWT
-JWT_EXPIRES_IN=jwt expiration
+JWT_EXPIRES_IN=jwt expiration in ms/s/h/d
